Fixed warnings in SoarDocument.java
Also repaired misuses of container classes throughout the project.